Jann 30/objects/RFAUserRole__c.object
<CustomObject>
    <fields>
        <fullName>Agent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgentsAssigned__c</fullName>
        <formula>IF( ISBLANK( Agent1__c) &amp;&amp;  ISBLANK( Agent2__c) &amp;&amp; ISBLANK( Agent3__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <label>Agents Assigned?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <defaultValue>IF($RecordType.Name == &apos;Info Copy Only&apos;, &quot;Info Copy Only&quot;, &quot;&quot;)</defaultValue>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalOrder__c</fullName>
        <defaultValue>IF( $RecordType.Name  = &quot;Approver&quot;, 1,0)</defaultValue>
        <inlineHelpText>This field is used to sequence the order of approvals during circulation.  Notifications will be sent to approvers in order from the lowest to highest number.  Approvers with the same order number will receive notifications at the same time.</inlineHelpText>
        <label>Approval Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Process</label>
        <referenceTo>ApprovalProcess__c</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalRecievedDateTime__c</fullName>
        <label>ApprovalRecieved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovalRecommendation__c</fullName>
        <label>Approval Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Unconditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalRequestedOn__c</fullName>
        <description>RFA R1 - Field to track when Approval is requested to the Approver</description>
        <label>Approval Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFA_User_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoNotSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send E-mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify if the POC or CoCreator are duplicate on RFA</description>
        <label>DuplicateRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>UserName__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_Automated__c</fullName>
        <label>Manual/Automated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifyUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyagent1firsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notification to identify if an e-mail notification has been sent to the agent 1 selected user.</description>
        <label>Notifyagent1firsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyagent2firsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notification to identify if an e-mail notification has been sent to the agent 2 selected user.</description>
        <label>Notifyagent2firsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyagent3firsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notification to identify if an e-mail notification has been sent to the agent 3 selected user.</description>
        <label>Notifyagent3firsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyuserfirsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifyuserfirsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFAStage__c</fullName>
        <formula>TEXT(RFA__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFAStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFA_Current_Level__c</fullName>
        <description>Display current level of Parent RFA. If RFA Level is Capital Management Hold, Pending Board Review or Return to Sender, display RFA Previous Level value. Else, display RFA Level value.</description>
        <formula>IF ( ISPICKVAL( RFA__r.Level__c , &quot;Capital Management Hold&quot;) ||  ISPICKVAL( RFA__r.Level__c , &quot;Pending Board Review&quot;) || ISPICKVAL( RFA__r.Level__c , &quot;Return To Sender&quot;), 
RFA__r.PreviousLevel__c, TEXT(RFA__r.Level__c))</formula>
        <label>RFA Current Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFA_Level__c</fullName>
        <formula>TEXT(RFA__r.Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFA Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipName>RFA_User_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TECH_IsComplete__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;Awaiting Approval&quot;)), NOT(ISPICKVAL(ApprovalRecommendation__c, &quot;&quot;))), &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInAwaitingApproval__c</fullName>
        <formula>IF( ISPICKVAL( ApprovalRecommendation__c, &apos;Awaiting Approval&apos;) , 
(NOW() -  ApprovalRequestedOn__c) , 
 ApprovalRecievedDateTime__c - ApprovalRequestedOn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_TimeInAwaitingApproval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFAUserRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isComplete</label>
        <type>Checkbox</type>
    </fields>
    <label>RFA Approver/User</label>
    <nameField>
        <displayFormat>Details-{00000000}</displayFormat>
        <label>Approval Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFA Approvers/Users</pluralLabel>
    <recordTypes>
        <fullName>RUR_Approver</fullName>
        <active>true</active>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>RUR_CoCreator</fullName>
        <active>true</active>
        <label>Co-Creator</label>
    </recordTypes>
    <recordTypes>
        <fullName>RUR_InfoCopyOnly</fullName>
        <active>true</active>
        <label>Info Copy Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>RUR_PrimaryPointofContact</fullName>
        <active>true</active>
        <label>Primary Point of Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RUR_VR01_CommentsMandatoryCondApp</fullName>
        <active>true</active>
        <description>RFA R1 - Approval Comments is required when Approval Recommendation provided as Conditionally Approved or Rejected</description>
        <errorConditionFormula>AND( $RecordType.DeveloperName = &apos;RUR_Approver&apos;,  OR(ISPICKVAL(ApprovalRecommendation__c, &apos;Conditionally Approved&apos;), ISPICKVAL(ApprovalRecommendation__c, &apos;Rejected&apos;) ),  ISBLANK(ApprovalComments__c) )</errorConditionFormula>
        <errorDisplayField>ApprovalComments__c</errorDisplayField>
        <errorMessage>Approval Comment is required when Approval Recommendation is selected as Conditionally Approved or Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR02_UniqueAgentSelection</fullName>
        <active>true</active>
        <description>RFA R1 - Check for unique selection of agents in the system</description>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(Agent1__c)), OR(Agent1__c == Agent2__c, Agent1__c == Agent3__c)),
AND(NOT(ISBLANK(Agent2__c)), OR(Agent2__c == Agent1__c, Agent2__c == Agent3__c)), 
AND(NOT(ISBLANK(Agent3__c)), OR(Agent3__c == Agent1__c, Agent2__c == Agent3__c))
)</errorConditionFormula>
        <errorMessage>Same User can not be selected more than once as a Agent for the same Approver</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR03_ApproverCannotBeAgent</fullName>
        <active>true</active>
        <description>RFA R1 - Validation rule to restrict users for selecting the Approver as agent for itself</description>
        <errorConditionFormula>OR(UserName__c == Agent1__c, UserName__c == Agent2__c, UserName__c == Agent3__c)</errorConditionFormula>
        <errorMessage>Same User can not be selected as Approver and Agent for the Same record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR04_NoUpdRecom_in_Circul_Validatio</fullName>
        <active>true</active>
        <description>RFA R1 - Do not allow Approval Recommendation and Approval Comments to be populated unless the Approval Process lookup field is populated.</description>
        <errorConditionFormula>ApprovalProcess__c == &quot;&quot;  &amp;&amp;  ApprovalComments__c != &quot;Info Copy Only&quot; &amp;&amp;
(NOT( ISBLANK( TEXT (ApprovalRecommendation__c ))) || NOT( ISBLANK(ApprovalComments__c )))</errorConditionFormula>
        <errorMessage>The Approval Recommendation field and the Approval Comments field can only be populated once the approval record has been submitted to the Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR05_AppandAgent_in_Circul_Validatio</fullName>
        <active>true</active>
        <description>RFA R1 - Approver and Agent references cannot be changed if Approval Recommendation has been received from the Original Actor or its associated Agent</description>
        <errorConditionFormula>NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;Awaiting Approval&quot;)) &amp;&amp; 
NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;&quot;)) &amp;&amp;
(ISCHANGED(UserName__c) || ISCHANGED(Agent1__c) || ISCHANGED(Agent2__c) || ISCHANGED(Agent3__c))</errorConditionFormula>
        <errorMessage>Approver or Agent cannot be changed after Approval Recommendation has been received.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR06_Unblank_Approval_Recommendation</fullName>
        <active>true</active>
        <description>User cannot reset the approval recommendation while the RFA is in Circulation</description>
        <errorConditionFormula>AND( 
ISBLANK(TEXT(ApprovalRecommendation__c)), 
NOT(ISBLANK(PRIORVALUE(ApprovalRecommendation__c))), 
ISPICKVAL( RFA__r.Stage__c, &quot;Circulation&quot;), 
OR( 
ISPICKVAL( ApprovalProcess__r.Status__c , &quot;In Progress&quot;), 
ISPICKVAL( ApprovalProcess__r.Status__c, &quot;Completed&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>ApprovalRecommendation__c</errorDisplayField>
        <errorMessage>Approval Recommendation must be populated while the RFA is in Circulation. Select a valid Approval Recommendation or Cancel to return to the previous page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR07_NoUpdApprover_in_Circulation</fullName>
        <active>true</active>
        <description>RFA R1 - Do not allow User Name to be updated unless the Approval Process lookup field is not populated.</description>
        <errorConditionFormula>NOT( ISBLANK ( TEXT (ApprovalRecommendation__c) )) &amp;&amp; ISCHANGED(  UserName__c )</errorConditionFormula>
        <errorDisplayField>UserName__c</errorDisplayField>
        <errorMessage>The User Name field cannot be changed once the approval record has been submitted to the Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR09_Lock_RecordType</fullName>
        <active>true</active>
        <description>Cannot change record type value</description>
        <errorConditionFormula>ISCHANGED( RecordTypeId )</errorConditionFormula>
        <errorMessage>Cannot Change Record Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR10_NoUpdAppRecomLow_in_Circulation</fullName>
        <active>true</active>
        <description>Do not allow lower level approval recommendation to be changed during next level circulation (for INC1454846 / CHG0071721)</description>
        <errorConditionFormula>AND( 
ISCHANGED(ApprovalRecommendation__c), 
TEXT(ApprovalRecommendation__c) !=PRIORVALUE(ApprovalRecommendation__c), 
TEXT(PRIORVALUE(ApprovalRecommendation__c))!=&apos;Awaiting Approval&apos;, 
NOT(ISBLANK(PRIORVALUE(ApprovalRecommendation__c))), 
RFA_Level__c!=TEXT(Level__c), 
RFAStage__c=&apos;Circulation&apos; 
)</errorConditionFormula>
        <errorDisplayField>ApprovalRecommendation__c</errorDisplayField>
        <errorMessage>The Lower Level Approval Recommendation field cannot be changed once the RFA is in next level Circulation</errorMessage>
    </validationRules>
</CustomObject>